--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply bg-white/10 px-10 py-3 font-semibold text-white transition ease-out duration-500 hover:bg-white/20 rounded-full active:scale-75
+}
+
+body {
+  @apply bg-white dark:bg-gray-900
+}
