--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .btn {
-  @apply bg-white/10 px-10 py-3 font-semibold text-white transition ease-out duration-500 hover:bg-white/20 rounded-full active:scale-75
+  @apply bg-gray-800 px-10 py-3 font-semibold text-white transition ease-out duration-500 hover:bg-white/20 rounded-full active:scale-75
 }
 
 body {
